[package]
name = "jam"
version = "0.1.0"
authors = ["Txus <me@txus.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.46", features = ['serde-serialize'] }
js-sys = "0.3.23"

[dependencies.web-sys]
version = "0.3.23"
features = [
  'console',
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
  'BiquadFilterNode',
  'BiquadFilterType',
  'Window',
  'Document',
]
